--- a/Home.html
+++ b/Home.html
@@ -9,7 +9,7 @@
     <meta name="iWeb-Build" content="local-build-20130921" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <meta name="viewport" content="width=700" />
-    <title>Title</title>
+    <title>Text</title>
     <link rel="stylesheet" type="text/css" media="screen,print" href="Home_files/Home.css" />
     <!--[if lt IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Home_files/HomeIE.css'/><![endif]-->
     <!--[if gte IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Media/IE8.css'/><![endif]-->
@@ -22,12 +22,12 @@
     <div style="text-align: center; ">
       <div style="margin-bottom: 0px; margin-left: auto; margin-right: auto; margin-top: 0px; overflow: hidden; position: relative; word-wrap: break-word;  text-align: left; width: 700px; " id="body_content">
         <div style="background: transparent url(Home_files/flowers_tile_700.jpg) repeat scroll top left; width: 700px; ">
-          <div style="height: 91px; margin-left: 0px; position: relative; width: 700px; z-index: 10; " id="header_layer">
+          <div style="height: 80px; margin-left: 0px; position: relative; width: 700px; z-index: 10; " id="header_layer">
             <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
-            <div id="id1" style="height: 63px; left: 40px; position: absolute; top: 28px; width: 620px; z-index: 1; " class="style_SkipStroke shape-with-text">
+            <div id="id1" style="height: 63px; left: 40px; position: absolute; top: 8px; width: 620px; z-index: 1; " class="style_SkipStroke shape-with-text">
               <div class="text-content style_External_620_63 vertical-align-middle-middlebox" style="padding: 0px; ">
                 <div class="style vertical-align-middle-innerbox">
-                  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Header">Title</p>
+                  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Header">Text</p>
                 </div>
               </div>
             </div>
@@ -65,7 +65,7 @@
 </div>
             </div>
             <script type="text/javascript"><!--//--><![CDATA[//><!--
-new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources', '.', {"path-to-root": "", "navbar-css": ".navbar {\nfont-family: 'Hoefler Text', 'Times New Roman';\nfont-size: 1em;\ncolor: #6F1897;\ntext-align: left;\n}\n\n.navbar-bg { \nbackground-image: url(Home_files\/tile_waterclr_pk_med100_1.jpg);\n}\n\n.navbar ul {\nlist-style: none;\nline-height: 28px;\nmargin: 0px;\npadding: 3px 0 0 50px;\n}\n\n.navbar ul li {\ndisplay: inline;\npadding: 0px 35px 0px 0px;\n}\n\n\n.navbar a , .noncurrent-page a:visited {\ntext-decoration: none;\ncolor: #6F1897;\nbackground-image: url(Home_files\/heartpurple_1.png);\n_background-image: url(Home_files\/heartpurple.png);\nbackground-repeat: no-repeat;\nbackground-position: 0px 1px;\npadding-left: 20px;\n}\n\n.noncurrent-page a:hover {\ntext-decoration: none;\ncolor: #A70A65;\nbackground-image: url(Home_files\/heartpink_1.png);\n_background-image: url(Home_files\/heartpink.png);\nbackground-repeat: no-repeat;\nbackground-position: 0px 0px;\npadding-left: 20px;\n}\n\n.current-page a , .current-page a:hover , .current-page a:visited {\ntext-decoration: none;\nbackground-image: url(Home_files\/heartwhite.png);\n_background-image: url(Home_files\/heartwhite_1.png);\nbackground-position: 0px 3px;\npadding: 4px 0px 0px 27px;\ncolor: #FFF;\n}\n", "current-page-GUID": "67403BD4-8F77-42A9-BA28-8CCE4E7D7E5F", "isCollectionPage": "NO"});
+new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources', '.', {"path-to-root": "", "navbar-css": ".navbar {\nfont-family: 'Hoefler Text', 'Times New Roman';\nfont-size: 1em;\ncolor: #6F1897;\ntext-align: left;\n}\n\n.navbar-bg { \nbackground-image: url(Home_files\/tile_waterclr_pk_med100_1.jpg);\n}\n\n.navbar ul {\nlist-style: none;\nline-height: 28px;\nmargin: 0px;\npadding: 3px 0 0 50px;\n}\n\n.navbar ul li {\ndisplay: inline;\npadding: 0px 35px 0px 0px;\n}\n\n\n.navbar a , .noncurrent-page a:visited {\ntext-decoration: none;\ncolor: #6F1897;\nbackground-image: url(Home_files\/heartpurple_1.png);\n_background-image: url(Home_files\/heartpurple.png);\nbackground-repeat: no-repeat;\nbackground-position: 0px 1px;\npadding-left: 20px;\n}\n\n.noncurrent-page a:hover {\ntext-decoration: none;\ncolor: #A70A65;\nbackground-image: url(Home_files\/heartpink_1.png);\n_background-image: url(Home_files\/heartpink.png);\nbackground-repeat: no-repeat;\nbackground-position: 0px 0px;\npadding-left: 20px;\n}\n\n.current-page a , .current-page a:hover , .current-page a:visited {\ntext-decoration: none;\nbackground-image: url(Home_files\/heartwhite.png);\n_background-image: url(Home_files\/heartwhite_1.png);\nbackground-position: 0px 3px;\npadding: 4px 0px 0px 27px;\ncolor: #FFF;\n}\n", "current-page-GUID": "D20EAAD3-71A2-431F-BE21-49B25AD10295", "isCollectionPage": "NO"});
 //--><!]]></script>
             <div style="clear: both; height: 0px; line-height: 0px; " class="spacer"> </div>
           </div>
